Products on Homepage

--- a/ecommerce/templates/products/home.html
+++ b/ecommerce/templates/products/home.html
@@ -16,16 +16,48 @@ Welcome to
 {# Comments here #}
 
 
+{% block jumbotron2 %}
+  <div class="container">
+
+			<!-- Main component for a primary marketing message or call to action -->
+			<div class="jumbotron">
+			<h1> Hello {{ username_is }}</h1>
+			<p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+			<p>To see the difference between static and fixed top navbars, just scroll.</p>
+			<p>
+			<a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
+			</p>
+			</div>
+  </div>
+{% endblock %}
+
 {% block content %}
 
-<!-- Main component for a primary marketing message or call to action -->
-<div class="jumbotron">
-<h1> Hello {{ username_is }}</h1>
-<p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-<p>To see the difference between static and fixed top navbars, just scroll.</p>
-<p>
-<a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-</p>
+
+
+
+<div class='row'>
+
+{% for product in products %}
+		<div class='col-sm-3'>
+		{% for item in product.productimage_set.all %}
+
+		{% if item.featured %}
+		<img src="{{ MEDIA_URL }}{{ item.image }}" />
+		{% endif %}
+
+		{% endfor %}
+		{{ product.id }}
+		{{ product.title }}
+		{{ product.price }}
+
+
+
+		</div>
+
+{% cycle "" "" "" "</div><br/><hr/><div class='row'>" %}
+{% endfor %}
+
 </div>
 
 {% endblock %}
