--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -45,7 +45,10 @@
   <body>
 
   {% include 'navbar.html' %}
-
+  <div class="container">
+    {% block jumbotron %}
+    {% endblock %}
+    </div>
     <div class="container">
 
     {% block content %}
