Bootstrap Images Part 1

--- a/ecommerce/templates/products/home.html
+++ b/ecommerce/templates/products/home.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load staticfiles %}
+
 {% block head_title %}
 Welcome to
 {% endblock %}
@@ -39,23 +41,38 @@ Welcome to
 <div class='row'>
 
 {% for product in products %}
-		<div class='col-sm-3'>
-		{% for item in product.productimage_set.all %}
+		<div class='col-sm-4'>
 
-		{% if item.featured %}
-		<img src="{{ MEDIA_URL }}{{ item.image }}" />
-		{% endif %}
 
-		{% endfor %}
-		
-		<a href='{{ product.get_absolute_url }}'>{{ product.title }}</a>
-		{{ product.price }}
-		
+
+			<div class="thumbnail">
+					{% if product.productimage_set.all %}
+
+							{% for item in product.productimage_set.all %}
+
+							{% if item.featured %}
+							<img class='img-responsive' src="{{ MEDIA_URL }}{{ item.image }}" />
+							{% endif %}
+							 
+
+
+							{% endfor %}
+
+					{% else %}
+					<img class='img-responsive' src='{% static "img/placeholder.svg" %}' />
+					{% endif %}
+
+					<div class="caption">
+					<a href='{{ product.get_absolute_url }}'> <h3>{{ product.title }}</h3></a>
+					<p>{{ product.description|truncatewords:15}}</p>
+					<p><a href="{{ product.get_absolute_url }}" class="btn btn-primary" role="button">View</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+					</div>
+		   	 </div>
 
 
 		</div>
 
-{% cycle "" "" "" "</div><br/><hr/><div class='row'>" %}
+{% cycle "" "" "</div><br/><hr/><div class='row'>" %}
 {% endfor %}
 
 </div>
