--- a/ecommerce/templates/navbar.html
+++ b/ecommerce/templates/navbar.html
@@ -11,23 +11,13 @@
           <a class="navbar-brand" href="#">CFE eCommerce</a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Welcome</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pull down <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
+
+          <form class="navbar-form navbar-left" role="search" action='/s/'>
+            <div class="form-group">
+          <input type="text" class="form-control" name='q' placeholder="Search Product Title">
+            </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+          </form>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="../navbar/">Default</a></li>
             <li class="active"><a href="./">Static top</a></li>
