--- a/ecommerce/templates/products/single.html
+++ b/ecommerce/templates/products/single.html
@@ -31,7 +31,7 @@
 	{% endfor %}
 	</div>
 	<div class='col-sm-8'>
-	 <h1>{{ product.title }} <a href='#' class='pull-right'>Add to Cart</a></h1>
+	 <h1>{{ product.title }} <a href='{% url "update_cart" product.slug %}' class='pull-right'>Add to Cart</a></h1>
 	 <hr/>
 	 Price: {{ product.price }} <br/>
 	 Shipping: Free with $25+ purchase.
