--- a/ecommerce/templates/cart/view.html
+++ b/ecommerce/templates/cart/view.html
@@ -2,8 +2,13 @@
 
 
 {% block content %}
-
 <div class='col-sm-8 col-sm-offset-2'>
+{% if empty %}
+
+<h1 style='text-align:center;'>{{ empty_message }}</h1>
+
+{% else %}
+
 
 <table class='table'>
 <thead>
@@ -25,5 +30,7 @@
 
 </table>
 
+
+{% endif %}
 </div>
 {% endblock %}
