--- a/ecommerce/templates/cart/view.html
+++ b/ecommerce/templates/cart/view.html
@@ -14,6 +14,7 @@
 <thead>
 <th>Item</th>
 <th>Price</th>
+<th>Qty</th>
 <th></th>
 </thead>
 <tfoot>
@@ -23,9 +24,10 @@
 <td>Total: {{ cart.total }}</td>
 </tr>
 </tfoot>
-{% for item in cart.products.all %}
+{% for item in cart.items.all %}
 
-<tr><td>{{ item }}</td><td>{{ item.price }}</td><td><a href='{% url "update_cart" item.slug %}'>Remove</a></tr>
+<tr><td>{{ item.product }}</td><td>{{ item.product.price }}</td>
+<td>{{ item.quantity }}</td><td><a href='{% url "update_cart" item.product.slug %}'>Remove</a></tr>
 {% endfor %}
 
 </table>
