--- a/ecommerce/templates/cart/view.html
+++ b/ecommerce/templates/cart/view.html
@@ -24,7 +24,7 @@
 <td>Total: {{ cart.total }}</td>
 </tr>
 </tfoot>
-{% for item in cart.items.all %}
+{% for item in cart.cartitem_set.all %}
 
 <tr><td>{{ item.product }}</td><td>{{ item.product.price }}</td>
 <td>{{ item.quantity }}</td><td><a href='{% url "update_cart" item.product.slug %}'>Remove</a></tr>
