--- a/ecommerce/templates/cart/view.html
+++ b/ecommerce/templates/cart/view.html
@@ -27,7 +27,7 @@
 {% for item in cart.cartitem_set.all %}
 
 <tr><td>{{ item.product }}</td><td>{{ item.product.price }}</td>
-<td>{{ item.quantity }}</td><td><a href='{% url "update_cart" item.product.slug %}'>Remove</a></tr>
+<td>{{ item.quantity }}</td><td><a href='{% url "update_cart" item.product.slug %}?qty=0'>Remove</a></tr>
 {% endfor %}
 
 </table>
