--- a/ecommerce/templates/products/single.html
+++ b/ecommerce/templates/products/single.html
@@ -31,7 +31,14 @@
 	{% endfor %}
 	</div>
 	<div class='col-sm-8'>
-	 <h1>{{ product.title }} <a href='{% url "update_cart" product.slug %}' class='pull-right'>Add to Cart</a></h1>
+	 <h1>{{ product.title }} 
+
+	 <a href='{% url "update_cart" product.slug %}?qty=12' class='pull-right'>Add to Cart</a></h1>
+	 	 <form class='form pull-right' method='GET' action='{% url "update_cart" product.slug %}'>
+	 	<input name='qty' type='number' value='1'/>
+	 	<input name='attr' type='text' placeholder='color' />
+	 	<input type='submit' value='Add to cart'/>
+	 </form>
 	 <hr/>
 	 Price: {{ product.price }} <br/>
 	 Shipping: Free with $25+ purchase.
