29 - Cart Item Notes

--- a/ecommerce/templates/cart/view.html
+++ b/ecommerce/templates/cart/view.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 
+
 {% block content %}
 <div class='col-sm-8 col-sm-offset-2'>
 {% if empty %}
@@ -15,6 +16,7 @@
 <th>Item</th>
 <th>Price</th>
 <th>Qty</th>
+<th>Notes</th>
 <th></th>
 </thead>
 <tfoot>
@@ -26,8 +28,12 @@
 </tfoot>
 {% for item in cart.cartitem_set.all %}
 
-<tr><td>{{ item.product }}</td><td>{{ item.product.price }}</td>
-<td>{{ item.quantity }}</td><td><a href='{% url "update_cart" item.product.slug %}?qty=0'>Remove</a></tr>
+<tr>
+<td>{{ item.product }}</td>
+<td>{{ item.product.price }}</td>
+<td>{{ item.quantity }}</td>
+<td>{{ item.notes }}</td>
+<td><a href='{% url "update_cart" item.product.slug %}?qty=0'>Remove</a></tr>
 {% endfor %}
 
 </table>
