Product Variations pt 2

--- a/ecommerce/templates/cart/view.html
+++ b/ecommerce/templates/cart/view.html
@@ -16,7 +16,6 @@
 <th>Item</th>
 <th>Price</th>
 <th>Qty</th>
-<th>Notes</th>
 <th></th>
 </thead>
 <tfoot>
@@ -29,10 +28,10 @@
 {% for item in cart.cartitem_set.all %}
 
 <tr>
-<td>{{ item.product }}</td>
+<td>{{ item.product }} {% if item.variations.all %}<ul>{% for subitem in item.variations.all %}<li>{{ subitem.category|capfirst}} : {{ subitem.title|capfirst }}{% endfor %}</li><ul> {% endif %}</td>
 <td>{{ item.product.price }}</td>
 <td>{{ item.quantity }}</td>
-<td>{{ item.notes }}</td>
+<td></td>
 <td><a href='{% url "update_cart" item.product.slug %}?qty=0'>Remove</a></tr>
 {% endfor %}
 
