--- a/ecommerce/templates/products/single.html
+++ b/ecommerce/templates/products/single.html
@@ -37,7 +37,7 @@
 			 </h1>
 		 </div>
 		 <div class='col-sm-4 pull-right'>
-			 	 <form class='form' method='GET' action='{% url "update_cart" product.slug %}'>
+			 	 <form class='form' method='POST' action='{% url "update_cart" product.slug %}'> {% csrf_token %}
 			 	 <input class='btn btn-default btn-block' type='submit' value='Add to cart'/>
 			 	<input  class="form-control"  name='qty' type='number' value='1'/>
 			 	
@@ -53,7 +53,7 @@
 			 	{% endif %}
 
 			 	 {% if product.variation_set.colors %}
-			 	<select class='form-control' name='size'>
+			 	<select class='form-control' name='color'>
 			 	{% for item in product.variation_set.colors %}
 			 		<option value='{{ item.title|lower }}'>{{ item.title|capfirst }}</option>
 			 		{% endfor %}
