Product Variations pt 3

--- a/ecommerce/templates/cart/view.html
+++ b/ecommerce/templates/cart/view.html
@@ -32,7 +32,7 @@
 <td>{{ item.product.price }}</td>
 <td>{{ item.quantity }}</td>
 <td></td>
-<td><a href='{% url "update_cart" item.product.slug %}?qty=0'>Remove</a></tr>
+<td><a href='#'>Remove</a></tr>
 {% endfor %}
 
 </table>
