--- a/ecommerce/templates/products/results.html
+++ b/ecommerce/templates/products/results.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load staticfiles %}
 
 
 {% block content %}
@@ -7,5 +7,52 @@
 <h1>Searched for: {{ query }}</h1>
 
 {{ products }}
+
+<table class='table'>
+<thead>
+<th></th>
+<th>Product</th>
+</thead>
+
+<tbody>
+{% for product in products %}
+	<tr>
+	<td style="width:160px; height:160px;">
+
+	{% if product.productimage_set.all %}
+		{% for item in product.productimage_set.all %}
+			{% if item.featured %}
+
+	<!-- <div style='width:100%; height:100%;
+	background-image: url("{{ MEDIA_URL }}{{ item.image }}");
+	background-size:cover;background-repeat:no-repeat; background-position:center;'></div>
+ -->
+ 	<a href='{{ product.get_absolute_url }}'>
+ 		<div class='background_img_thumb' style="height:160px;background-image: url('{{ MEDIA_URL }}{{ item.image }}');"></div>
+ 	</a>
+
+			{% endif %}
+		{% endfor %}
+
+	{% else %}
+	<a href='{{ product.get_absolute_url }}'>
+	<div class='background_img_thumb' style='height:160px;'></div>
+	</a>
+<!-- 	<div style='width:100%; height:100%;background-image:url("{% static "img/placeholder.svg" %}");background-size:cover;background-repeat:no-repeat; background-position:center;'></div> -->
+
+
+	{% endif %}
+	</td>
+	<td>
+	<a href='{{ product.get_absolute_url }}'>
+	{{ product }}</a>
+	</td>
+	</tr>
+{% endfor %}
+
+</tbody>
+
+
+</table>
 
 {% endblock %}
