--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -26,6 +26,17 @@
     <style>
     {% block styles %}
     {% endblock %}
+
+    .background_img_thumb {
+        width:100%; 
+        height:100%;
+        background-image: url("{% static 'img/placeholder.svg' %}");
+        background-size:cover;
+        background-repeat:no-repeat; 
+        background-position:center;
+    }
+
+
     </style>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
