Logout View & Login View

--- a/ecommerce/templates/navbar.html
+++ b/ecommerce/templates/navbar.html
@@ -23,6 +23,9 @@
             <li><a href="{% url 'cart' %}">Cart <span class="badge">{% if not request.session.items_total %} 0 {% else %} {{ request.session.items_total }} {% endif%}</span></a></li>
             {% if user.is_authenticated %}
             <li><a href="#">Account</a></li>
+            <li><a href="{% url 'auth_logout' %}">Logout</a></li>
+            {% else %}
+            <li><a href="{% url 'auth_login' %}">Login</a></li>
             {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
