Post Save Signal

--- a/ecommerce/templates/form.html
+++ b/ecommerce/templates/form.html
@@ -7,7 +7,9 @@
 <div class='col-sm-6 col-sm-offset-3' style='margin-top: 50px;'>
 <form method='POST' action=''>{% csrf_token %}
 {{ form.as_p }}
-<input type='submit' value='Login' class='btn btn-default' />
+
+
+<input type='submit' value='{% if submit_btn %}{{ submit_btn }}{% else %}Submit{% endif %}' class='btn btn-default' />
 </form>
 </div>
 
