--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -29,6 +29,7 @@
         border-radius: 0px;
         text-align: center;
         background-color: #DBDBDB;
+        display: none;
     }
     .alert-top-message h3{
         margin: 0 auto;
@@ -75,11 +76,16 @@
     {% endblock %}
 
     <div class="container">
-    <div class='alert alert-success alert-dismissible' role='alert'>
-    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-      <p>Hello there</p>
-  </div>
-
+         {% if messages %}
+            {% for message in messages %}
+            <div class='alert {% if "success" in message.tags %}alert-success{% elif "warning" in message.tags%}alert-warning{% elif "error" in message.tags %}alert-danger{% endif %} alert-dismissible' role='alert'>
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+               
+                {% if "safe" in message.tags %}{{ message|safe }}{% else %}{{ message }}{% endif %}
+                
+          </div>
+          {% endfor %}
+      {% endif %}
     {% block content %}
 
     {% endblock %}
