--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -29,7 +29,7 @@
         border-radius: 0px;
         text-align: center;
         background-color: #DBDBDB;
-        display: none;
+     
     }
     .alert-top-message h3{
         margin: 0 auto;
@@ -64,12 +64,15 @@
   </head>
 
   <body>
+  {% if marketing_message %}
   <div class='alert alert-top-message alert-dismissible' role='alert'>
     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
       <div class="container">
-        <h3>Hello there</h3>
+        <h3>{{ marketing_message.message|safe }}</h3>
       </div>
   </div>
+  {% endif %}
+
   {% include 'navbar.html' %}
 
     {% block jumbotron %}
