--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -64,11 +64,11 @@
   </head>
 
   <body>
-  {% if marketing_message %}
+  {% if request.session.marketing_message %}
   <div class='alert alert-top-message alert-dismissible' role='alert'>
     <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
       <div class="container">
-        <h3>{{ marketing_message.message|safe }}</h3>
+        <h3>{{ request.session.marketing_message|safe }}</h3>
       </div>
   </div>
   {% endif %}
