--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -12,15 +12,17 @@
     <title>{% block head_title %}{% endblock %}CFE STORE</title>
 
     {% load staticfiles %}
-    <link rel='stylesheet' href='{% static "css/bootstrap.min.css" %}' />
-    <link rel='stylesheet' href='{% static "css/bootstrap-theme.min.css" %}' />
+    <!-- <link rel='stylesheet' href='{% static "css/bootstrap.min.css" %}' />
+    <link rel='stylesheet' href='{% static "css/bootstrap-theme.min.css" %}' /> -->
 
-	<!-- Latest compiled and minified CSS 
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">--> 
+      <!-- Latest compiled and minified CSS 
+  --> 
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+
 
 	<!-- Optional theme 
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> -->
-
+ -->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
     <!-- Custom styles for this template -->
     <link href="http://getbootstrap.com/examples/navbar-static-top/navbar-static-top.css" rel="stylesheet">
     <style>
@@ -78,6 +80,9 @@
     {% block jumbotron %}
     {% endblock %}
 
+  
+
+
     <div class="container">
          {% if messages %}
             {% for message in messages %}
@@ -101,7 +106,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
   <script>
       $(document).ready(function(){
         $("#marketing-message-btn").click(function(){
