--- a/ecommerce/templates/products/home.html
+++ b/ecommerce/templates/products/home.html
@@ -33,6 +33,50 @@ Welcome to
   </div>
 {% endblock %}
 
+
+{% block jumbotron %}
+
+  <div class='container' style='margin-top: -19px;margin-bottom: 19px;'>
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="http://www.oasis-land.com/perch/resources/seven-mile-beach-grand-cayman-1.jpg" alt="...">
+              <div class="carousel-caption">
+              <h1>Hello There</h1>
+                <p>Hello World</p>
+              </div>
+            </div>
+            <div class="item">
+              <img src="http://www.oasis-land.com/perch/resources/seven-mile-beach-grand-cayman-1.jpg" alt="...">
+              <div class="carousel-caption">
+              <h1>Hello There</h1>
+                <p>Hello World</p>
+              </div>
+            </div>
+  
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+    </div>
+{% endblock %}
+
 {% block content %}
 
 
