--- a/ecommerce/templates/products/home.html
+++ b/ecommerce/templates/products/home.html
@@ -35,31 +35,35 @@ Welcome to
 
 
 {% block jumbotron %}
-
+{% if sliders %}
   <div class='container' style='margin-top: -19px;margin-bottom: 19px;'>
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+           {% for slider in sliders %}
+            <li data-target="#carousel-example-generic" data-slide-to="{{ forloop.counter }}"{% if forloop.first %}class="active"{% endif %}>
+            </li>
+            {% endfor %}
           </ol>
 
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <img src="http://www.oasis-land.com/perch/resources/seven-mile-beach-grand-cayman-1.jpg" alt="...">
+
+            {% for slider in sliders %}
+              <div class="item {% if forloop.first %}active{% endif %}">
+              <img src="{{ slider.get_image_url }}" alt="...">
               <div class="carousel-caption">
-              <h1>Hello There</h1>
-                <p>Hello World</p>
+                  {% if slider.header_text %}
+                  <h1>{{ slider.header_text }}</h1>
+                  {% endif %}
+                  {% if slider.text %}
+                  <p>{{ slider.text }}</p>
+                  {% endif %}
+            
               </div>
             </div>
-            <div class="item">
-              <img src="http://www.oasis-land.com/perch/resources/seven-mile-beach-grand-cayman-1.jpg" alt="...">
-              <div class="carousel-caption">
-              <h1>Hello There</h1>
-                <p>Hello World</p>
-              </div>
-            </div>
+
+            {% endfor %}
   
           </div>
 
@@ -75,6 +79,8 @@ Welcome to
         </div>
 
     </div>
+
+    {% endif %}
 {% endblock %}
 
 {% block content %}
