Featured Sliders & Slider Links

--- a/ecommerce/templates/products/home.html
+++ b/ecommerce/templates/products/home.html
@@ -51,13 +51,15 @@ Welcome to
 
             {% for slider in sliders %}
               <div class="item {% if forloop.first %}active{% endif %}">
+                {% if slider.url_link %}<a href='{{ slider.url_link }}'>{% endif %}
               <img src="{{ slider.get_image_url }}" alt="...">
+                {% if slider.url_link %}</a>{% endif %}
               <div class="carousel-caption">
                   {% if slider.header_text %}
-                  <h1>{{ slider.header_text }}</h1>
+                  <h1>{{ slider.header_text|safe }}</h1>
                   {% endif %}
                   {% if slider.text %}
-                  <p>{{ slider.text }}</p>
+                  <p>{{ slider.text|safe }}</p>
                   {% endif %}
             
               </div>
