--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -100,6 +100,8 @@
 
     </div> <!-- /container -->
 
+    {% include "modal.html" %}
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -124,6 +126,15 @@
               },
            });
         });
+    
+
+        function showModal(){
+          $("#marketingModal").modal("show");
+          // setTimeout(showModal, 5000);
+        }
+
+        setTimeout(showModal, 5000);
+
     });
 
 
