Add Form to Modal

--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -132,8 +132,8 @@
           $("#marketingModal").modal("show");
           // setTimeout(showModal, 5000);
         }
-
-        setTimeout(showModal, 5000);
+        showModal();
+        // setTimeout(showModal, 5000);
 
     });
 
