Ajax Email Sign Up

--- a/ecommerce/templates/base.html
+++ b/ecommerce/templates/base.html
@@ -36,6 +36,10 @@
     .alert-top-message h3{
         margin: 0 auto;
     }
+
+    .modal-dialog {
+      margin-top: 20%;
+    }
     {% block styles %}
     {% endblock %}
 
@@ -127,13 +131,39 @@
            });
         });
     
-
+        {% if not request.user.is_autheniticated and not request.session.email_added_marketing %}
         function showModal(){
           $("#marketingModal").modal("show");
           // setTimeout(showModal, 5000);
         }
-        showModal();
-        // setTimeout(showModal, 5000);
+        // showModal()
+        setTimeout(showModal, 5000);
+        $("#sendMarketingForm").click(function(e){
+          e.preventDefault()
+          var mForm = $("#sendForm").serialize()
+         $.ajax({
+              type: "POST",
+              url: "{% url 'ajax_email_signup' %}",
+              data: mForm,
+              success: function(data){
+                // console.log(data)
+                $("#modalMessage").html("<p>" + data + "</p>")
+                 $("#marketingModal").modal("hide");
+              },
+              error: function(data){
+                // console.log(data)
+                // console.log(data.responseJSON)
+                var obj = data.responseJSON
+                // console.log(obj)
+                // console.log(obj.email)
+                $("#modalMessage").html("<p style='color:red;'>" + obj.email + "</p>")
+              },
+           });
+        });
+        {% endif %}
+
+
+        
 
     });
 
