Checkout - Selecting Addresses

--- a/ecommerce/templates/orders/checkout.html
+++ b/ecommerce/templates/orders/checkout.html
@@ -4,11 +4,59 @@
 
 {% block content %}
 
+
+{% if address_form %}
+<div class='col-sm-6 pull-right'>
+<h3>Add new Address</h3>
 <form method="POST" action='{% url "ajax_add_user_address" %}?next=checkout'>{% csrf_token %}
 {{ address_form.as_p }}
 
 <input type='submit' class='btn btn-default' value='Add Address'/>
 </form>
+</div>
+{% endif %}
 
+
+
+
+<form method='POST' action=""> {% csrf_token %}
+{% if current_addresses  %}
+<div class='col-sm-6'>
+<h3>Shipping Addresses</h3>
+{% for address in current_addresses %}
+<input type='radio' name='shipping_address' value='{{ address.id }}' /> {{ address.get_address }} <br/>
+
+{% endfor %}
+</div>
+{% endif %}
+
+
+
+
+<div class='row'>
+
+{% if billing_addresses  %}
+<div class='col-sm-6'>
+<h3>Billing Addresses</h3>
+{% for address in billing_addresses %}
+
+<input type='radio' name='billing_address' value='{{ address.id }}' /> {{ address.get_address }} <br/>
+
+{% endfor %}
+</div>
+{% endif %}
+
+
+
+</div>
+
+<div class='row'>
+
+<h3>Credit Info</h3>
+
+
+</div>
+
+</form>
 
 {% endblock %}
