Checkout - User Default Address

--- a/ecommerce/templates/orders/checkout.html
+++ b/ecommerce/templates/orders/checkout.html
@@ -7,11 +7,11 @@
 
 {% if address_form %}
 <div class='col-sm-6 pull-right'>
-<h3>Add new Address</h3>
+<h3>Add new Shipping Address</h3>
 <form method="POST" action='{% url "ajax_add_user_address" %}?next=checkout'>{% csrf_token %}
 {{ address_form.as_p }}
 
-<input type='submit' class='btn btn-default' value='Add Address'/>
+<input type='submit' class='btn btn-default' value='Add Shipping Address'/>
 </form>
 </div>
 {% endif %}
@@ -24,7 +24,14 @@
 <div class='col-sm-6'>
 <h3>Shipping Addresses</h3>
 {% for address in current_addresses %}
+
+{% if request.user.userdefaultaddress.shipping.id == address.id %} 
+
+<input type='radio' name='shipping_address' value='{{ address.id }}' checked='checked'/> {{ address.get_address }} <br/>
+{% else %}
 <input type='radio' name='shipping_address' value='{{ address.id }}' /> {{ address.get_address }} <br/>
+
+{% endif %}
 
 {% endfor %}
 </div>
@@ -40,7 +47,13 @@
 <h3>Billing Addresses</h3>
 {% for address in billing_addresses %}
 
+{% if request.user.userdefaultaddress.billing.id == address.id %} 
+
+<input type='radio' name='billing_address' value='{{ address.id }}' checked='checked'/> {{ address.get_address }} <br/>
+{% else %}
 <input type='radio' name='billing_address' value='{{ address.id }}' /> {{ address.get_address }} <br/>
+
+{% endif %}
 
 {% endfor %}
 </div>
