--- a/ecommerce/templates/form.html
+++ b/ecommerce/templates/form.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 <div class='col-sm-6 col-sm-offset-3' style='margin-top: 50px;'>
+<h1>{{ form_title }}</h1>
 <form method='POST' action=''>{% csrf_token %}
 {{ form.as_p }}
 
