--- a/ecommerce/templates/orders/checkout.html
+++ b/ecommerce/templates/orders/checkout.html
@@ -38,14 +38,23 @@ function stripeResponseHandler(status, response) {
   }
 };
 
+
+$("#addShippingAddress").click(function(e){
+  e.preventDefault();
+  $("#shippingAddressForm").fadeToggle();
+
+})
+
+{% if not current_addresses  %}
+  $("#shippingAddressForm").fadeToggle();
+{% endif %}
+
 {% endblock %}
 </script>
 
 {% block content %}
 
-
-{% if address_form %}
-<div class='col-sm-6 pull-right'>
+<div class='col-sm-6 pull-right' id='shippingAddressForm' style='display:none;'>
 <h3>Add new Shipping Address</h3>
 <form method="POST" action='{% url "ajax_add_user_address" %}?next=checkout'>{% csrf_token %}
 {{ address_form.as_p }}
@@ -53,7 +62,7 @@ function stripeResponseHandler(status, response) {
 <input type='submit' class='btn btn-default' value='Add Shipping Address'/>
 </form>
 </div>
-{% endif %}
+
 
 
 
@@ -62,17 +71,19 @@ function stripeResponseHandler(status, response) {
 {% if current_addresses  %}
 <div class='col-sm-6'>
 <h3>Shipping Addresses</h3>
-{% for address in current_addresses %}
+      {% for address in current_addresses %}
 
-{% if request.user.userdefaultaddress.shipping.id == address.id %} 
+      {% if request.user.userdefaultaddress.shipping.id == address.id %} 
 
-<input type='radio' name='shipping_address' value='{{ address.id }}' checked='checked'/> {{ address.get_address }} <br/>
-{% else %}
-<input type='radio' name='shipping_address' value='{{ address.id }}' /> {{ address.get_address }} <br/>
+      <input type='radio' name='shipping_address' value='{{ address.id }}' checked='checked'/> {{ address.get_address }} <br/>
+      {% else %}
+      <input type='radio' name='shipping_address' value='{{ address.id }}' /> {{ address.get_address }} <br/>
 
-{% endif %}
+      {% endif %}
 
-{% endfor %}
+      {% endfor %}
+
+<a href='{% url "add_user_address" %}' id='addShippingAddress'>Add New Address</a>
 </div>
 {% endif %}
 
