--- a/ecommerce/templates/orders/checkout.html
+++ b/ecommerce/templates/orders/checkout.html
@@ -26,9 +26,11 @@ function stripeResponseHandler(status, response) {
 
   if (response.error) {
     // Show the errors on the form
+    $("#card_errors_div").removeClass("hidden");
     $form.find('.payment-errors').text(response.error.message);
     $form.find('button').prop('disabled', false);
   } else {
+    $("#card_errors_div").addClass("hidden");
     // response contains id and card, which contains additional card details
     var token = response.id;
     // Insert the token into the form so it gets submitted to the server
@@ -52,8 +54,27 @@ $("#addShippingAddress").click(function(e){
 {% endblock %}
 </script>
 
+<style>
+{% block styles %}
+
+@media(min-width: 1200px) {
+  .total { 
+    position: fixed;
+  }
+}
+
+{% endblock %}
+</style>
+
+
 {% block content %}
 
+<div class='col-sm-3 pull-right'>
+<div class='total'>
+<h1>Current total: {{ order.get_final_amount }}</h1>
+<a href='#'>Finalize Checkout</a>
+</div>
+</div>
 <div class='col-sm-6 pull-right' id='shippingAddressForm' style='display:none;'>
 <h3>Add new Shipping Address</h3>
 <form method="POST" action='{% url "ajax_add_user_address" %}?next=checkout'>{% csrf_token %}
@@ -66,7 +87,7 @@ $("#addShippingAddress").click(function(e){
 
 
 
-<h1>Current total: {{ order.get_final_amount }}</h1>
+
 <form method='POST' action="" id="payment-form"> {% csrf_token %}
 {% if current_addresses  %}
 <div class='col-sm-6'>
@@ -114,41 +135,49 @@ $("#addShippingAddress").click(function(e){
 </div>
 
 <div class='row'>
-
+<div class='col-sm-6'>
 <h3>Credit Info</h3>
-
-  <span class="payment-errors"></span>
-
-  <div class="form-row">
-    <label>
-      <span>Card Number</span>
-      <input type="text" size="20" data-stripe="number"/>
-    </label>
+  <div id='card_errors_div' class="alert alert-danger hidden payment-errors" role="alert">
   </div>
 
   <div class="form-row">
-    <label>
-      <span>CVC</span>
-      <input type="text" size="4" data-stripe="cvc"/>
-    </label>
+    <div class='row'>
+    <div class='col-xs-6' style='padding-right:0px;'>
+    <b>Card Number</b>
+      <input class='form-control' type="text" size="20" data-stripe="number"/>
+    </div>
+    <div class='col-xs-2'>
+     <b>CVC</b>
+      <input class='form-control' type="text" size="4" data-stripe="cvc"/>
+
+    </div>
+
+    </div>
+
   </div>
+  <br/>
 
   <div class="form-row">
-    <label>
-      <span>Expiration (MM/YYYY)</span>
-      <input type="text" size="2" data-stripe="exp-month"/>
-    </label>
-    <span> / </span>
-    <input type="text" size="4" data-stripe="exp-year"/>
-  </div>
+    <b>Expiration (MM/YYYY)</b>
+    <div class='row'>
 
-  <button type="submit">Submit Payment</button>
+    <div class='col-xs-2' style='padding-right:0px;'>
+          <input class='form-control'  type="text" size="2" data-stripe="exp-month" placeholder='2'/>
+        </div>
+        <div class='col-xs-3'>
+        <input  class='form-control' type="text" size="4" data-stripe="exp-year" placeholder='2017'/>
+        </div>
+    </div>
+  </div>
+  <br/>
+  <br/>
+  <button class='btn btn-default btn-lg' type="submit">Submit Payment</button>
 
 
 
 
 </div>
-
+</div>
 </form>
 
 {% endblock %}
